# Walter

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.temp/: config_example.yaml  new.md
misc/: old.py
walter/: __init__.py  __main__.py  action_selector.py  app.py  asker.py  config.py  console_printer.py  default_config.yaml  default_prompt.md  history.py  prompt.py  ui.py
walter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
walter/providers/: __init__.py  base.py  gemini.py  mistral.py  ollama.py
