[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walter"
version = "2.0.0"
description = "Walter: Modern CLI command generator with TUI interface."
authors = [
  { name="NoLilypad" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cli", "llm", "command", "generator", "tui", "ollama", "gemini", "mistral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "PyYAML>=6.0",
    "platformdirs>=3.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3"]
gemini = ["google-genai>=1.0"]
mistral = ["mistralai>=1.0"]
all = [
    "ollama>=0.3",
    "google-genai>=1.0",
    "mistralai>=1.0",
]

[project.scripts]
walter = "walter.__main__:main"

[project.urls]
Homepage = "https://github.com/NoLilypad/Walter"
Repository = "https://github.com/NoLilypad/Walter"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
walter = ["default_config.yaml", "default_prompt.md"]
